--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,13 +1,14 @@
 {
   "name": "AI Study Genius",
   "short_name": "StudyAI",
-  "description": "Asistente educativo con IA para generar guías de estudio y analizar imágenes",
-  "start_url": "/mobile.html",
+  "description": "Plataforma educativa completa con 8 características únicas",
+  "start_url": "./mobile.html?source=pwa&v=2025100219",
   "display": "standalone",
-  "background_color": "#1a1a2e",
-  "theme_color": "#4facfe",
+  "background_color": "#6366f1",
+  "theme_color": "#6366f1",
   "orientation": "portrait",
-  "scope": "/",
+  "scope": "./",
+  "version": "2.0.20251002",
   "icons": [
     {
       "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 192'%3E%3Cdefs%3E%3ClinearGradient id='grad' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%234facfe;stop-opacity:1' /%3E%3Cstop offset='100%25' style='stop-color:%2300f2fe;stop-opacity:1' /%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='192' height='192' rx='24' fill='url(%23grad)'/%3E%3Ctext x='96' y='120' font-family='Arial, sans-serif' font-size='80' font-weight='bold' text-anchor='middle' fill='white'%3E🧠%3C/text%3E%3C/svg%3E",
