--- a/js/backend/package.json
+++ b/js/backend/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "openai": "^4.55.0",
+    "@google/generative-ai": "^0.21.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "helmet": "^7.1.0"
+    "helmet": "^7.1.0",
+    "axios": "^1.6.0",
+    "cookie-parser": "^1.4.6"
   },
   "description": ""
 }
