Configurar Netlify correctamente para deploy

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,19 @@
 [build]
-  command = "npm install && npm run build"
+  command = "cd js/backend && npm install"
   publish = "."
-  functions = "functions"
+  functions = "js/backend"
 
-[env.production]
-  GEMINI_API_KEY = "AIzaSyCQL9TI0bFDWE7BHb9SOxfjJRFzfs3C93Q"
-  GITHUB_CLIENT_ID = "Ov23liW73K2PDTT9pk6h"
-  GITHUB_CLIENT_SECRET = "514fd2f3f8d1abfae8755505a7ca4ac508422dee"
-  NODE_ENV = "production"
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
+
+[[redirects]]
+  from = "/auth/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
