--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,9 @@
   publish = "."
   functions = "netlify/functions"
 
+[env.production]
+  GEMINI_API_KEY = "AIzaSyCQL9TI0bFDWE7BHb9SOxfjJRFzfs3C93Q"
+
 [[redirects]]
   from = "/api/health"
   to = "/.netlify/functions/health"
@@ -22,9 +25,3 @@
   from = "/*"
   to = "/index.html"
   status = 200
-
-[env]
-  GEMINI_API_KEY = "AIzaSyCQL9TI0bFDWE7BHb9SOxfjJRFzfs3C93Q"
-  GITHUB_CLIENT_ID = "Ov23liW73K2PDTT9pk6h"
-  GITHUB_CLIENT_SECRET = "514fd2f3f8d1abfae8755505a7ca4ac508422dee"
-  NODE_ENV = "production"
